--- a/src/pages/browse/Browse.css
+++ b/src/pages/browse/Browse.css
@@ -2,10 +2,23 @@
     color: #ffff;
 }
 
+.browse-container > .thumbnail-section {
+    position: relative;
+}
+
 .browse-container > .thumbnail-section > .thumbnail {
     width: 100%;
     height: 95vh;
     background-size: cover;
     background-position: center;
-    
+
+}
+
+.browse-container > .thumbnail-section > .description {
+    position: absolute;
+    bottom: 250px;
+    left: 80px;
+    font-size: 32px;
+    font-weight: 500;
+    max-width: 700px;
 }
