--- a/src/pages/browse/Browse.css
+++ b/src/pages/browse/Browse.css
@@ -14,11 +14,22 @@
 
 }
 
-.browse-container > .thumbnail-section > .description {
+.browse-container > .thumbnail-section > .description-section {
     position: absolute;
-    bottom: 250px;
+    bottom: 200px;
     left: 80px;
+    max-width: 700px;
+}
+
+.browse-container > .thumbnail-section > .description-section > .description {
     font-size: 32px;
     font-weight: 500;
-    max-width: 700px;
+}
+
+.browse-container > .thumbnail-section > .description-section > .action {
+    margin-top: 50px;
+}
+
+.browse-container > .thumbnail-section > .description-section > .action > .primary-button:first-child {
+    margin-right: 15px;
 }
