--- a/src/pages/browse/Browse.css
+++ b/src/pages/browse/Browse.css
@@ -16,14 +16,16 @@
 
 .browse-container > .thumbnail-section > .description-section {
     position: absolute;
-    bottom: 200px;
+    bottom: 450px;
     left: 80px;
     max-width: 700px;
 }
 
 .browse-container > .thumbnail-section > .description-section > .description {
+    display: inline-block;
     font-size: 32px;
     font-weight: 500;
+    margin-bottom: 20px;
 }
 
 .browse-container > .thumbnail-section > .description-section > .action {
