--- a/src/components/button/Button.css
+++ b/src/components/button/Button.css
@@ -1,11 +1,10 @@
 .primary-button {
     background-color: #ffff;
     border: none;
-    min-width: 190px;
-    border-radius: 3px;
+    border-radius: 4px;
     margin-right: 15px;
-    padding: 5px 40px;
-    font-size: 24px;
+    padding: 0.5vh 3vw;
+    font-size: 1.2vw;
     font-weight: 500;
     font-family: inherit;
     transition: background 200ms linear;
@@ -32,10 +31,9 @@
 .secondary-button {
     color: #ffff;
     background: rgba(120, 120, 120, 0.4);
-    min-width: 210px;
-    border-radius: 3px;
-    padding: 5px 40px;
-    font-size: 24px;
+    border-radius: 4px;
+    padding: 0.5vh 3.5vw;
+    font-size: 1.2vw;
     font-weight: 500;
     font-family: inherit;
     transition: background 200ms linear;
