--- a/src/pages/browse/Browse.css
+++ b/src/pages/browse/Browse.css
@@ -1,37 +1,41 @@
-.browse-container {
-    color: #ffff;
-}
-
 .browse-container > .thumbnail-section {
     position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    margin: auto;
+    width: 100%;
 }
 
 .browse-container > .thumbnail-section > .thumbnail {
     width: 100%;
-    height: 95vh;
-    background-size: cover;
-    background-position: center;
+}
 
+.browse-container > .thumbnail-section > .thumbnail > img {
+    width: 100%;
+    object-fit: cover;
 }
 
 .browse-container > .thumbnail-section > .description-section {
     position: absolute;
-    bottom: 450px;
     left: 80px;
-    max-width: 700px;
+    bottom: 35%;
+    width: 100%;
+    max-width: 30%;
+}
+
+.browse-container > .thumbnail-section > .description-section > img {
+    width: 95%;
+    object-fit: cover;
 }
 
 .browse-container > .thumbnail-section > .description-section > .description {
     display: inline-block;
-    font-size: 32px;
-    font-weight: 500;
-    margin-bottom: 20px;
-}
-
-.browse-container > .thumbnail-section > .description-section > .action {
-    margin-top: 50px;
-}
-
-.browse-container > .thumbnail-section > .description-section > .action > .primary-button:first-child {
-    margin-right: 15px;
+    color: #fff;
+    font-weight: 400;
+    line-height: normal;
+    width: 100%;
+    font-size: 1.4vw;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.45);
+    margin-top: 0.9vw;
+    margin-bottom: 1.5vw;
 }
