--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,17 +1,24 @@
+.navbar, .scrolled {
+    z-index: 999;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.9) 10%, transparent);
+    transition: background-color 0.65s ease-in-out;
+}
+
+.scrolled {
+    background-color: #0b0b0b;
+}
+
 .navbar-container {
-    z-index: 1;
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    right: 0px;
     padding: 20px 40px;
     padding-bottom: 10px;
     display: flex;
     align-items: center;
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.7) 10%, transparent);
 }
 
-.navbar-container .logo {
+.navbar-container > .logo {
     width: 100px;
     margin-right: 40px;
 }
@@ -56,4 +63,37 @@
 .navbar-container > .profile-image {
     width: 32px;
     height: 32px;
+}
+
+.profile {
+    position: relative;
+}
+
+.profile > .icon {
+    margin: 0px 15px;
+    cursor: pointer;
+    color: #ffff;
+    font-size: 32px;
+}
+
+.profile > .options {
+    display: none;
+}
+
+.profile > .options > span {
+    color: #ffff;
+    font-size: 14px;
+    padding: 10px;
+    cursor: pointer;
+}
+
+.profile:hover > .options  {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 36px;
+    right: 15px;
+    background-color: #0b0b0b;
+    border-radius: 5px;
+    padding: 10px 5px;
 }
