--- a/src/components/profiles/Profiles.css
+++ b/src/components/profiles/Profiles.css
@@ -3,66 +3,104 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height: 100vh;
+    height: 120vh;
 }
 
 .profiles-container > .title {
-    color: #ffff;
-    font-family: inherit;
-    font-size: 68px;
     user-select: none;
+    color: #ffff;
+    text-align: center;
+    font-family: inherit;
+    font-size: 3em;
 }
 
 .profiles-container > .profiles {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    flex-direction: column;
     flex-wrap: wrap;
+    margin: 30px 0;
 }
 
 .profiles-container > .profiles > .profile {
     display: flex;
     flex-direction: column;
-    margin: 0px 20px;
-    margin-top: 40px;
-    margin-bottom: 80px;
-}
-
-.profiles-container > .profiles > .profile:first-child {
-    margin-left: 0px;
-}
-
-.profiles-container > .profiles > .profile:last-child {
-    margin-right: 0px;
-}
-
-.profiles-container > .profiles > .profile:hover {
-    cursor: pointer;
-}
-
-.profiles-container > .profiles > .profile:hover > .username {
-    color: #ffff;
-}
-
-.profiles-container > .profiles > .profile:hover > .image {
-    border: 5px solid #ffff;
-    border-radius: 10px;
 }
 
 .profiles-container > .profiles > .profile > .image {
-    width: 200px;
-    height: 200px;
+    width: 150px;
+    height: 150px;
     margin-bottom: 15px;
     border: 5px solid transparent;
     border-radius: 10px;
-}
-
-.profiles-container > .profiles > .profile > .image:first-child {
-    margin-left: 0px;
 }
 
 .profiles-container > .profiles > .profile > .username {
     color: var(--grey-color);
     text-align: center;
     font-size: 24px;
+}
+
+
+/* Tables */
+@media (min-width: 769px) and (orientation: landscape) {
+    .profiles-container {
+        height: 110vh;
+    }
+    .profiles-container > .profiles {
+        flex-direction: row;
+    }
+
+    .profiles-container > .profiles > .profile {
+        margin: 0px 20px;
+        margin-top: 40px;
+        margin-bottom: 40px;
+    }
+
+    .profiles-container > .profiles > .profile:first-child {
+        margin-left: 0px;
+    }
+    
+    .profiles-container > .profiles > .profile:last-child {
+        margin-right: 0px;
+    }
+}
+
+
+/* Laptops */
+@media (min-width: 769px) {
+
+}
+
+/* Desktop */
+@media (min-width: 1200px) {
+
+    .profiles-container {
+        height: 80vh;
+    }
+
+    .profiles-container > .title {
+        font-size: 68px;
+    }
+    
+    .profiles-container > .profiles > .profile:hover {
+        cursor: pointer;
+    }
+    
+    .profiles-container > .profiles > .profile:hover > .username {
+        color: #ffff;
+    }
+    
+    .profiles-container > .profiles > .profile:hover > .image {
+        border: 5px solid #ffff;
+        border-radius: 10px;
+    }
+    
+    .profiles-container > .profiles > .profile > .image {
+        width: 200px;
+        height: 200px;
+    }
+    
+    .profiles-container > .profiles > .profile > .image:first-child {
+        margin-left: 0px;
+    }
 }
