react-netflix-ts: browse page - different images depending media queries

--- a/src/components/profiles/Profiles.css
+++ b/src/components/profiles/Profiles.css
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height: 120vh;
+    margin-top: 120px;
 }
 
 .profiles-container > .title {
