--- a/src/components/button/Button.css
+++ b/src/components/button/Button.css
@@ -1,23 +1,25 @@
 .primary-button {
+    position: relative;
     background-color: #ffff;
     border: none;
     border-radius: 3px;
-    margin-right: 15px;
-    padding: 2px 20px;
-    font-size: 18px;
+    padding: 2px 40px;
+    font-size: 17px;
     font-weight: 500;
     font-family: inherit;
     transition: background 200ms linear;
 }
 
+.primary-button > .play {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 8px;
+    margin: auto;
+}
+
 .secondary-button {
-    color: #ffff;
-    background: rgba(120, 120, 120, 0.4);
-    border-radius: 3px;
-    padding: 2px 20px;
-    font-size: 18px;
-    font-weight: 500;
-    font-family: inherit;
+    display: none;
 }
 
 .secondary-ghost-button {
@@ -32,33 +34,70 @@
 
 /* Tables */
 @media (min-width: 769px) and (orientation: landscape) {
+    .primary-button {
+        background-color: #ffff;
+        border: none;
+        border-radius: 4px;
+        margin-right: 15px;
+        padding: 2px 35px;
+        font-size: 18px;
+        font-weight: 500;
+        font-family: inherit;
+        transition: background 200ms linear;
+    }
+
+    .primary-button > .play {
+        left: 5px;
+    }
+    
     .secondary-button, .secondary-ghost-button {
         font-size: 18px;
+    }
+
+    .secondary-button {
+        display: block;
+        color: #ffff;
+        background: rgba(120, 120, 120, 0.4);
+        border-radius: 3px;
+        padding: 2px 20px;
+        font-size: 18px;
+        font-weight: 500;
+        font-family: inherit;
     }
 }
 
 
 /* Laptops */
 @media (min-width: 769px) {
-
-}
-
-/* Desktop */
-@media (min-width: 1200px) {
     .primary-button {
         background-color: #ffff;
         border: none;
         border-radius: 4px;
         margin-right: 15px;
-        padding: 2px 20px;
+        padding: 2px 35px;
         font-size: 18px;
         font-weight: 500;
         font-family: inherit;
         transition: background 200ms linear;
     }
+
+    .primary-button > .play {
+        left: 3px;
+    }
     
     .primary-button:hover {
         background-color: rgb(200, 200, 200);
+    }
+
+    .secondary-button {
+        display: block;
+        color: #ffff;
+        background: rgba(120, 120, 120, 0.4);
+        border-radius: 3px;
+        padding: 2px 10px;
+        font-size: 18px;
+        font-weight: 500;
+        font-family: inherit;
     }
     
     .secondary-ghost-button {
@@ -78,6 +117,10 @@
     .secondary-button:hover {
         background: rgba(50, 50, 50, 0.4);
     }
+}
+
+/* Desktop */
+@media (min-width: 1200px) {
 }
 
 
