--- a/src/components/button/Button.css
+++ b/src/components/button/Button.css
@@ -1,9 +1,10 @@
 .primary-button {
     position: relative;
     background-color: #ffff;
+    color: #000;
     border: none;
     border-radius: 3px;
-    padding: 2px 40px;
+    padding: 5px 40px;
     font-size: 17px;
     font-weight: 500;
     font-family: inherit;
@@ -16,6 +17,7 @@
     bottom: 0;
     left: 8px;
     margin: auto;
+    color: #000;
 }
 
 .secondary-button {
@@ -74,28 +76,30 @@
         border: none;
         border-radius: 4px;
         margin-right: 15px;
-        padding: 2px 35px;
-        font-size: 18px;
+        padding: 2px 4.2vw;
+        font-size: 1rem;
         font-weight: 500;
         font-family: inherit;
         transition: background 200ms linear;
     }
 
-    .primary-button > .play {
-        left: 3px;
-    }
-    
     .primary-button:hover {
         background-color: rgb(200, 200, 200);
     }
+
+    .primary-button > .play {
+        left: 0;
+        font-size: 1.5rem;
+    }
+    
 
     .secondary-button {
         display: block;
         color: #ffff;
         background: rgba(120, 120, 120, 0.4);
         border-radius: 3px;
-        padding: 2px 10px;
-        font-size: 18px;
+        padding: 2px 1.2vh;
+        font-size: 1rem;
         font-weight: 500;
         font-family: inherit;
     }
@@ -121,6 +125,19 @@
 
 /* Desktop */
 @media (min-width: 1200px) {
+    .primary-button {
+        padding: 2px 3.7vw;
+        font-size: 1.4rem;
+    }
+
+    .primary-button > .play {
+        font-size: 2.5rem;
+    }
+
+    .secondary-button {
+        padding: 2px 3vh;
+        font-size: 1.4rem;
+    }
 }
 
 
