--- a/src/components/row/Row.css
+++ b/src/components/row/Row.css
@@ -1,13 +1,3 @@
-.lists {
-    position: relative;
-}
-
-.lists > .lists-container {
-    position: absolute;
-    top: -20rem;
-    background: linear-gradient(to bottom, transparent, rgb(0, 0, 0) 90%);
-}
-
 .row {
     color: #ffff;
     margin-left: 10px;
@@ -21,9 +11,8 @@
 
 .posters {
     display: flex;
-    overflow-y: hidden;
     overflow-x: scroll;
-    margin-top: 10px;
+    margin-top: 10px;    
 }
 
 .posters::-webkit-scrollbar {
@@ -35,38 +24,13 @@
     max-height: 6rem;
     border-radius: 5px;
     margin-right: 10px;
-    transition: transform 450ms;
-}
-
-.poster:hover {
-    transform: scale(2);
 }
 
 /* Tables */
 @media (min-width: 769px) and (orientation: landscape) {
-    .lists {
-        position: relative;
-    }
-    
-    .lists > .lists-container {
-        position: absolute;
-        top: -20rem;
-        background: linear-gradient(to bottom, transparent, rgb(0, 0, 0) 90%);
-    }
-
     .row > h4 {
         font-family: inherit;
         font-size: 45px;
-    }
-    
-    .posters {
-        display: flex;
-        overflow-y: hidden;
-        overflow-x: scroll;
-    }
-    
-    .posters::-webkit-scrollbar {
-        display: none;
     }
     
     .poster {
@@ -74,18 +38,27 @@
         max-height: 12rem;
         border-radius: 5px;
         margin-right: 10px;
-        transition: transform 450ms;
-    }
-    
-    .poster:hover {
-        transform: scale(2);
-    }
+    }   
 }
 
 
 /* Laptops */
 @media (min-width: 769px) {
-    
+    .posters::-webkit-scrollbar {
+        display: none;
+    }
+
+    .poster {
+        object-fit: contain;
+        max-height: 12rem;
+        border-radius: 5px;
+        margin-right: 10px;
+        transition: transform 450ms;
+    }
+
+    .poster:hover {
+        transform: scale(2);
+    }
 }
 
 /* Desktop */
