--- a/src/components/listItem/ListItem.css
+++ b/src/components/listItem/ListItem.css
@@ -1,82 +1,81 @@
 .listItem {
-    width: 225px;
-    height: 120px;
-    background-color: var(--main-color);
-    margin-right: 5px;
-    overflow: hidden;
-    cursor: pointer;
-    color: white;
+  width: 225px;
+  height: 120px;
+  background-color: var(--main-color);
+  margin-right: 5px;
+  overflow: hidden;
+  cursor: pointer;
+  color: white;
 }
 
 .listItem > img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.listItem > video {
-    width: 100%;
-    height: 140px;
-    object-fit: cover;
-    position: absolute;
-    top: 0;
-    left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .listItem:hover {
-    width: 325px;
-    height: 300px;
-    position: absolute;
-    top: -150px;
-    -webkit-box-shadow: 0px 0px 15px 0px rgba(255, 255, 255, 0.07);
-    box-shadow: 0px 0px 15px 0px rgba(255, 255, 255, 0.07);
-    border-radius: 5px;
+  width: 325px;
+  height: 300px;
+  position: absolute;
+  top: -150px;
+  -webkit-box-shadow: 0px 0px 15px 0px rgba(255, 255, 255, 0.07);
+  box-shadow: 0px 0px 15px 0px rgba(255, 255, 255, 0.07);
+  border-radius: 5px;
+}
+
+.listItem:hover > video {
+  width: 100%;
+  height: 140px;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .listItem:hover > img {
-    height: 140px;
+  height: 140px;
 }
 
 .listItem:hover > .itemInfo {
-    display: flex;
-    flex-direction: column;
-    padding: 5px;
+  display: flex;
+  flex-direction: column;
+  padding: 5px;
 }
 
 .listItem:hover > .itemInfo > .icons {
-    display: flex;
-    margin-bottom: 10px;
+  display: flex;
+  margin-bottom: 10px;
 }
 
 .listItem:hover > .itemInfo > .icons > .icon {
-    border: 2px solid white;
-    padding: 5px;
-    border-radius: 50%;
-    margin-right: 10px;
-    font-size: 16px;
+  border: 2px solid white;
+  padding: 5px;
+  border-radius: 50%;
+  margin-right: 10px;
+  font-size: 16px;
 }
 
-.listItem:hover > .itemInfo {
-    display: flex;
-    align-items: center;
-    margin-bottom: 10px;
-    font-size: 14px;
-    font-weight: 600;
-    color: gray;
+.listItem:hover > .itemInfo > .itemInfoTop {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+  font-size: 14px;
+  font-weight: 600;
+  color: gray;
+}
+.listItem:hover > .itemInfo > .itemInfoTop > .limit {
+  border: 1px solid gray;
+  padding: 1px 3px;
+  margin: 0 10px;
 }
 
-.listItem:hover > .itemInfo > .limit {
-    border: 1px solid gray;
-    padding: 1px 3px;
-    margin: 0 10px;
+.listItem:hover > .itemInfo > .desc {
+  font-size: 13px;
+  margin-bottom: 10px;
 }
 
-.listItem:hover > .desc {
-    font-size: 13px;
-    margin-bottom: 10px;
-}
-
-.listItem:hover > .genre {
-    font-size: 14px;
-    color: lightgray;
+.listItem:hover > .itemInfo > .genre {
+  font-size: 14px;
+  color: lightgray;
 }
