--- a/src/components/row/Row.css
+++ b/src/components/row/Row.css
@@ -1,73 +1,81 @@
 .row {
-    color: #ffff;
-    margin-left: 10px;
-    margin-top: 15px;
+  color: #ffff;
+  margin-left: 10px;
+  margin-top: 15px;
 }
 
-.row > h4 {
-    font-family: inherit;
-    font-size: 21px;
+.row > title {
+  font-family: inherit;
+  font-size: 21px;
 }
 
-.posters {
-    display: flex;
-    overflow-x: scroll;
-    margin-top: 10px;
-    
+.row > .wrapper::-webkit-scrollbar {
+  display: none;
 }
 
-.posters::-webkit-scrollbar {
-    display: none;
+.row > .wrapper {
+  overflow-x: scroll;
 }
 
-.poster {
-    object-fit: contain;
-    max-height: 6rem;
-    border-radius: 5px;
-    margin-right: 10px;
+.row > .wrapper > .container {
+  display: flex;
+  margin-top: 10px;
+}
+
+.row > .wrapper > .sliderArrow {
+  display: none;
 }
 
 /* Tables */
 @media (min-width: 769px) and (orientation: landscape) {
-    .row > h4 {
-        font-family: inherit;
-        font-size: 45px;
-    }
-    
-    .poster {
-        object-fit: contain;
-        max-height: 12rem;
-        border-radius: 5px;
-        margin-right: 10px;
-    }   
+  .row > .title {
+    font-family: inherit;
+    font-size: 30px;
+    margin-left: 50px;
+  }
 }
-
 
 /* Laptops */
 @media (min-width: 769px) {
-    .row {
-        overflow: visible;
-    }
-    .posters::-webkit-scrollbar {
-        display: none;
-    }
+  .row {
+    overflow: visible;
+    margin-top: 50px;
+  }
 
-    .posters {
-        overflow: visible;
-    }
+  .row > .wrapper {
+    position: relative;
+    overflow: visible;
+  }
 
-    .poster {
-        object-fit: contain;
-        max-height: 12rem;
-        border-radius: 5px;
-        margin-right: 10px;
-        transition: transform 450ms;
-    }
+  .row > .wrapper > .sliderArrow {
+    display: block;
+    width: 50px;
+    height: 100%;
+    background-color: rgb(22, 22, 22, 0.5);
+    color: white;
+    position: absolute;
+    z-index: 99;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    cursor: pointer;
+  }
 
-    .poster:hover {
-        position: relative;
-        transform: scale(2);
-    }
+  .row > .wrapper > .left {
+    left: -0.4vw;
+  }
+
+  .row > .wrapper > .right {
+    right: 0;
+  }
+
+  .row > .wrapper > .container {
+    margin-left: 50px;
+    margin-top: 10px;
+    width: max-content;
+    transform: translateX(0px);
+    transition: all 1s ease;
+  }
 }
 
 /* Desktop */
