--- a/frontend/src/pages/register/Register.css
+++ b/frontend/src/pages/register/Register.css
@@ -17,7 +17,7 @@
     height: 24px;
 }
 
-.register > .top > .wrapper > .signInButton {
+.register > .top > .wrapper > a > .signInButton {
     background-color: red;
     border: none;
     color: #ffff;
@@ -32,7 +32,7 @@
     width: 100%;
     height: 100%;
     position: absolute;
-    top: 0;
+    top: 7vh;
     left: 0;
     text-align: center;
     display: flex;
